--- a/package.json
+++ b/package.json
@@ -9,20 +9,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
+    "@types/node": "^18.11.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0", 
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux": "^3.6.0",
+    "@types/redux-immutable-state-invariant": "^2.1.2",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.20.0",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.18",
+    "redux-immutable-state-invariant": "^2.1.0",
     "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4",
     "vite": "^3.2.0"
